docs/v5.0.0/_sources/gallery/extras/integrating_sphere.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/integrating_sphere.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_integrating_sphere.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_integrating_sphere.py:


Integrating sphere
==================

This example demonstrates the initialization and visualization of an Integrating Sphere detector using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 7-40



.. image-sg:: /gallery/extras/images/sphx_glr_integrating_sphere_001.png
   :alt: integrating sphere
   :srcset: /gallery/extras/images/sphx_glr_integrating_sphere_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    from PyMieSim.units import ureg

    from PyMieSim.single.scatterer import Sphere
    from PyMieSim.single.source import Gaussian
    from PyMieSim.polarization import PolarizationState
    from PyMieSim.single.detector import IntegratingSphere
    from PyMieSim.single import Setup


    polarization_state = PolarizationState(
        angle=0 * ureg.degree,
    )

    source = Gaussian(
        wavelength=1550 * ureg.nanometer,
        polarization=polarization_state,
        optical_power=1 * ureg.watt,
        numerical_aperture=0.3,
    )

    scatterer = Sphere(
        diameter=1800 * ureg.nanometer,
        medium=1.0,
        material=1.5,
    )

    detector = IntegratingSphere(
        sampling=200,
    )

    setup = Setup(scatterer=scatterer, source=source, detector=detector)

    setup.plot_system()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.301 seconds)


.. _sphx_glr_download_gallery_extras_integrating_sphere.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: integrating_sphere.ipynb <integrating_sphere.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: integrating_sphere.py <integrating_sphere.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: integrating_sphere.zip <integrating_sphere.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
